--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Simulator-Mobile</string>
+    <string name="send">Connect</string>
+    <string name="ip">IP</string>
+    <string name="port">PORT</string>
 </resources>
